# python-package-template

./: LICENSE  README.md  init.py  pyproject.toml
.github/workflows/: ci.yaml
docs/: mkdocs.yml
docs/pages/api/: main.md
tests/: test_template.py
